--- a/public/index.html
+++ b/public/index.html
@@ -5,30 +5,42 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AdoCloudServer</title>
+  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+  <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
+  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <style>
+    .server_item{
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-  <div> 云服务 </div>
-  <section>
-    <ul id="cloudServer">
-    </ul>
-  </section>
-  <script>
+  <div id="root">
+    <div>{{title}}</div>
 
-    // 得到文件夹下的所有文件信息
-    fetch('/api/files/list').then(res=>res.json()).then(res=>{
-      
-      // 可以从公共路径下 下载 tgz文件了
+    <div v-for="item in server_list " :key="item" class="server_item">{{item}}</div>
 
-      fetch(`/AdoServer/server/${res.data[0]}`).then(res=>{
-        console.log(res);
-      })
-      
+    <div>{{license}}</div>
+  </div>
+  <script type="text/javascript">
+    var vm = new Vue({
+        el: '#root',
+        data: {
+            title: "Ado-Cloud",
+            server_list:[],
+            license:"MIT"
+        },
+        methods: {
+            getList(){
+              fetch('/api/files/list').then(res=>res.json()).then(res=>{
+                this.server_list = res.data.ls
+              })
+            }
+        },
+        mounted(){
+          this.getList()
+        }
     })
-
-
-
-    // 实际路径 等于 /AdoServer/AdoDemoServer.tgz
-
   </script>
 </body>
 </html>
