--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,25 @@
 <body>
   <div id="root">
     <div>{{title}}</div>
-
+    <!-- element 表单 -->
+    <div>
+      <el-button>demo</el-button>
+    </div>
+    <!-- 文件上传 -->
+    <div>
+      <el-upload
+      class="upload-demo"
+      drag
+      action="http://localhost:3000/api/files/upload"
+      multiple
+    
+      :on-success="handle_success"
+      >
+        <i class="el-icon-upload"></i>
+        <div class="el-upload__text">将文件拖到此处，或<em>点击上传</em></div>
+        <div class="el-upload__tip" slot="tip">服务名最好以 Server.tgz 结尾</div>
+      </el-upload>
+    </div>
     <div v-for="item in server_list " :key="item" class="server_item">{{item}}</div>
 
     <div>{{license}}</div>
@@ -33,8 +51,13 @@
         methods: {
             getList(){
               fetch('/api/files/list').then(res=>res.json()).then(res=>{
+                console.log(res);
                 this.server_list = res.data.ls
               })
+            },
+            handle_success(res){
+              console.log('文件上传成功');
+              console.log('res',res);
             }
         },
         mounted(){
